--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
   id 'checkstyle'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.owasp.dependencycheck' version '6.2.2'
+  id 'org.owasp.dependencycheck' version '6.4.1.1'
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.sonarqube' version '3.3'
 }
@@ -65,6 +65,7 @@ allprojects {
       // CVE-2020-26945 - Mishandles deserialization of object streams.
       dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.7'
       dependency group: 'commons-io', name: 'commons-io', version: '2.10.0'
+      dependency group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.5.2'
     }
     imports {
       mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
@@ -187,7 +188,7 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.15.0'
+  implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.16.0'
   implementation group: 'org.camunda.bpm.extension.rest', name: 'camunda-rest-client-spring-boot-starter', version: '0.0.6'
 
   testImplementation libraries.junit5
