Slim functional tests - Run only Api tests

--- a/build.gradle
+++ b/build.gradle
@@ -121,8 +121,8 @@ task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
   commandLine '/usr/bin/yarn', '--silent', 'test:smoke'
 }
 
-task runFunctionalTests(type: Exec, description: 'Runs functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:functional'
+task runFunctionalTests(type: Exec, description: 'Runs Api functional tests.') {
+  commandLine '/usr/bin/yarn', '--silent', 'test:api-unspec'
 }
 
 task runRpaHandOffTests(type: Exec, description: 'Runs functional tests.') {
