--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
   id 'application'
   id 'checkstyle'
   id 'jacoco'
+  id 'org.springframework.boot' version '2.5.12'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.owasp.dependencycheck' version '7.0.1'
   id 'com.github.ben-manes.versions' version '0.39.0'
