--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -53,7 +53,8 @@ jobs:
               const branch = pull['head']['ref'];
               console.log('Pull for branch: ' + branch);
               if (branch.startsWith('${{env.branchPrefix}}')
-                  && !(branch.startsWith('dependabot/gradle/org.springframework-spring-core-5.3.19'))
+                  && !(branch.startsWith('dependabot/gradle/org.springframework-spring-core-5.3.19')
+            && !(branch.startsWith('dependabot/gradle/org.springframework-spring-core-5.3.19'))
             ) {
                 console.log('Branch matched : ' + branch);
                 statusOK = true;
