--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
   id 'checkstyle'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.owasp.dependencycheck' version '7.0.1'
+  id 'org.owasp.dependencycheck' version '7.1.0.1'
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.sonarqube' version '3.3'
 }
@@ -65,7 +65,7 @@ allprojects {
       // CVE-2020-26945 - Mishandles deserialization of object streams.
       dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.7'
       dependency group: 'commons-io', name: 'commons-io', version: '2.10.0'
-      dependency group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.6.2'
+      dependency group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.6.3'
     }
     imports {
       mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.1'
@@ -199,16 +199,16 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation group: 'org.springframework', name: 'spring-core', version: '5.3.18'
-  implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.18'
-  implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.16.0'
+  implementation group: 'org.springframework', name: 'spring-core', version: '5.3.19'
+  implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.19'
+  implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.17.0'
   implementation group: 'org.camunda.bpm.extension.rest', name: 'camunda-rest-client-spring-boot-starter', version: '0.0.6'
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.1'
-  implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.13.2', ext: 'pom'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.2'
+  implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: ' 2.13.2.20220328', ext: 'pom'
 
   testImplementation libraries.junit5
   testImplementation group: 'org.camunda.bpm.extension.springboot', name: 'camunda-bpm-spring-boot-starter-test', version: '2.2.0'
-  testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+  testImplementation group: 'com.h2database', name: 'h2', version: '2.1.212'
 }
 
 
