--- a/build.gradle
+++ b/build.gradle
@@ -204,7 +204,7 @@ dependencies {
   implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.17.0'
   implementation group: 'org.camunda.bpm.extension.rest', name: 'camunda-rest-client-spring-boot-starter', version: '0.0.6'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.2'
-  implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: ' 2.13.2.20220328', ext: 'pom'
+  implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: ' 2.13.2.1', ext: 'pom'
 
   testImplementation libraries.junit5
   testImplementation group: 'org.camunda.bpm.extension.springboot', name: 'camunda-bpm-spring-boot-starter-test', version: '2.2.0'
