--- a/build.gradle
+++ b/build.gradle
@@ -132,6 +132,10 @@ task runApiTests(type: Exec, description: 'Runs Api functional tests.') {
   commandLine '/usr/bin/yarn', '--silent', 'test:api-unspec'
 }
 
+task runDJTests(type: Exec, description: 'Runs DJ Api functional tests.') {
+  commandLine '/usr/bin/yarn', '--silent', 'test:e2e-dj-api'
+}
+
 task runRpaHandOffTests(type: Exec, description: 'Runs functional tests.') {
   commandLine '/usr/bin/yarn', '--silent', 'test:rpa'
 }
@@ -152,7 +156,7 @@ task smoke(description: 'Runs the smoke tests.') {
 }
 
 task functional(description: 'Runs the functional tests.') {
-  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, runSpecApiTests, runApiTests))
+  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, runSpecApiTests, runApiTests, runDJTests))
 }
 
 project.tasks['sonarqube'].dependsOn test, jacocoTestReport
