--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -7,7 +7,7 @@ postgresql:
   image:
     registry: hmctspublic.azurecr.io
     repository: imported/bitnami/postgresql
-    tag: '11.6.0'
+    tag: '11.3.0'
     pullPolicy: Always
   resources:
     requests:
@@ -204,6 +204,7 @@ camunda-bpm:
     disableKeyVaults: true
     releaseNameOverride: ${SERVICE_NAME}-camunda
     ingressHost: camunda-${SERVICE_FQDN}
+    imagePullPolicy: Always
     environment:
       CAMUNDA_API_AUTH_ENABLED: false
       CAMUNDA_DB_HOST: ${SERVICE_NAME}-postgresql
