--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -88,6 +88,7 @@ java:
     TESTING_SUPPORT_ENABLED: true
     POLLING_EVENT_EMITTER_ENABLED: false
     LAUNCH_DARKLY_ENV: camunda-staging
+    EM_CCD_ORCHESTRATOR_URL: http://em-ccd-orchestrator-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
 
 idam-pr:
   releaseNameOverride: ${SERVICE_NAME}-xui-idam-pr
