--- a/charts/civil-camunda/values.yaml
+++ b/charts/civil-camunda/values.yaml
@@ -17,6 +17,8 @@ java:
   applicationPort: 4000
   image: 'hmctspublic.azurecr.io/civil/service:latest'
   aadIdentityName: civil
+  environment:
+    EM_CCD_ORCHESTRATOR_URL: http://em-ccd-orchestrator-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
   keyVaults:
     civil:
       resourceGroup: civil
