--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,9 @@ task runApiTests(type: Exec, description: 'Runs Api functional tests.') {
 }
 
 task runDJTests(type: Exec, description: 'Runs DJ Api functional tests.') {
+  onlyIf {
+    return System.env.ENVIRONMENT == 'preview'
+  }
   commandLine '/usr/bin/yarn', '--silent', 'test:api-dj'
 }
 
