--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -5,6 +5,8 @@ postgresql:
   enabled: true
   releaseNameOverride: ${SERVICE_NAME}-postgresql
   image:
+    registry: hmctspublic.azurecr.io
+    repository: imported/bitnami/postgresql
     tag: '11.6.0'
   resources:
     requests:
