--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -218,7 +218,7 @@ ccd:
 camunda-bpm:
   enabled: true
   java:
-    disableKeyVaults: false
+    disableKeyVaults: true
     releaseNameOverride: ${SERVICE_NAME}-camunda
     ingressHost: civil-camunda-camunda-staging-aat.service.core-compute-aat.internal
     imagePullPolicy: Always
