--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -48,7 +48,8 @@ java:
         - robotics-notification-sender
         - robotics-notification-recipient
         - robotics-notification-recipient-spec
-
+        - name: launch-darkly-sdk-key-non-prod
+          alias: launch-darkly-sdk-key
         - robotics-notification-multipartyrecipient
         - ordnance-survey-api-key
   environment:
