--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,7 +12,7 @@
 # This should make it easy to add new rules without breaking existing ones.
 
 # Global rule:
-* @hmcts/civil-admins @hmcts/civil
+@hmcts/civil-admins @hmcts/civil
 
 # Infra:
 charts/ @hmcts/civil-infra-admins @hmcts/civil
