--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,13 @@ on:
 
 jobs:
   lint:
-    if: github.event.pull_request.user.login != 'renovate'
+    if: github.event.pull_request.user.login == 'renovate'
     runs-on: ubuntu-latest
     steps:
+    - name: NameCheck
+      env:
+        MATRIX_CONTEXT: ${{ toJson(github.event.pull_request) }}
+      run: echo "$MATRIX_CONTEXT"
     - uses: deepakputhraya/action-pr-title@master
       with:
         regex: '^(CIV-[0-9]{3,4} [a-zA-Z0-9._\- ]+)|(\[Snyk\].+)$' # Regex the title should match.
