--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   lint:
-    if: github.event.pull_request.user.login == 'renovate'
+    if: github.event.pull_request.user.login != 'renovate'
     runs-on: ubuntu-latest
     steps:
     - name: NameCheck
