--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   lint:
-    if: "!contains(github.event.pull_request.head.ref, 'renovate')"
+    if: "!contains(github.event.pull_request.head.ref, 'renovate') && !contains(github.event.pull_request.head.ref, 'dependabot')"
     runs-on: ubuntu-latest
     steps:
     - uses: deepakputhraya/action-pr-title@master
