CIV-5433 - Correct the Codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,9 +13,9 @@
 
 # Global rule:
 CODEOWNERS @hmcts/civil-admins
-* @hmcts/civil-admins @hmcts/civil
+* @hmcts/civil-admins
 
 # Infra:
-charts/ @hmcts/civil-infra-admins @hmcts/civil
-infrastructure/ @hmcts/civil-infra-admins @hmcts/civil
+charts/ @hmcts/civil-infra-admins
+infrastructure/ @hmcts/civil-infra-admins
 
